add search in breeds view

--- a/GUI/Views/BreedsView.xaml
+++ b/GUI/Views/BreedsView.xaml
@@ -17,8 +17,9 @@
         </Grid.RowDefinitions>
 
         <StackPanel>
-            <ItemsControl 
-                ItemsSource="{Binding Breeds}">
+            <TextBox Text="{Binding SearchText, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}"/>
+            <ItemsControl
+                ItemsSource="{Binding FilteredBreeds}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <DockPanel
