--- a/GUI/Views/AnimalsView.xaml
+++ b/GUI/Views/AnimalsView.xaml
@@ -16,8 +16,9 @@
             <RowDefinition Height="7*"/>
         </Grid.RowDefinitions>
         <StackPanel>
+            <TextBox Text="{Binding SearchText, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}"/>
             <ItemsControl 
-                ItemsSource="{Binding Animals}">
+                ItemsSource="{Binding FilteredAnimals}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <DockPanel
