--- a/GUI/Views/ApplicationsView.xaml
+++ b/GUI/Views/ApplicationsView.xaml
@@ -16,8 +16,9 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <StackPanel>
+            <TextBox Text="{Binding SearchText, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}"/>
             <ItemsControl 
-                ItemsSource="{Binding Applications}">
+                ItemsSource="{Binding FilteredApplications}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <DockPanel
